--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
     <h1>hello</h1>
     <p>hello world</p>
     <h2>how are you</h2>
+    <ol>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Bootstrap</li>
+    </ol>
+    <ul>
+        <li>C++</li>
+        <li>Java</li>
+        <li>Python</li>
+    </ul>
+    
 </body>
 </html>
