--- a/index.html
+++ b/index.html
@@ -3,23 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Happy Birthday Anvika</title>
+    <link rel="icon" href="bd.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
-    <h1>hello</h1>
-    <p>hello world</p>
-    <h2>how are you</h2>
-    <ol>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>Bootstrap</li>
-    </ol>
-    <ul>
-        <li>C++</li>
-        <li>Java</li>
-        <li>Python</li>
-    </ul>
-    
+    <audio autoplay>
+        <source src="music.mp3" type="audio/mpeg"> 
+    </audio>
+    <h1>Happy Birthday My Dear Kuttus</h1>
+    <br>
+    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col-xm-16">
+        <img src="img.gif" alt="" width="80%">
+        <br>
+        <br>
+        <img src="bd-1.jpeg" alt="" width="50%">
+            </div>
+        </div>
+    </div>
+     <br>
+     <br>
+     <br>
+     <br>
+
+     <footer>
+         <p>copyrigth @ <a href=""></a> Sai Krishna </p>
+         <p>2020 All Rights Reserved</p>
+     </footer>
+
+
+     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
